# graph-enumeration

./: .clangd  .gitignore  LICENSE  README.md  pyproject.toml
example/: performance.ipynb
src/graph_enumeration/: __init__.py  enumerate.py  graph.py
src/graph_enumeration/edge_generator/: edge_generator.cpp  edge_generator.h  edge_generator_module.cpp  graph.cpp  graph.h
tests/: test_edges.py  test_graphs.py  test_helper.py
